feat:优化 模组下载流程 和 日志输出 - 重构了 CurseForgeBulkDownloader 类，优化了模组下载流程 - 添加了更多详细的日志输出，便于跟踪下载过程 - 修复了一些潜在的 bug，提高了代码的健壮性 - 优化了 Downloader 类中的下载逻辑，提高了下载速度 - 重命名 Pack2Serv 为 Pack2server，统一命名规范